tests/parser/tests/cases/should_fail/pat_match_missing_semi/case.stderr
error: failed to parse
  --> $DIR/case.hash:10:16
 9 |           };
10 |           _ => -1
   |                  ^ here
11 |       };
   = note: unexpectedly reached the end of input.
   = help: consider adding a `;`
